api model, controller and routes set up

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>I-Hate-Angular</title>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular.min.js"></script>
 </head>
-<body>
+<body ng-app="angularApp">
   <h1>I HATE ANGELA</h1>
-  
+  {{ 1 + 1 }}  
 </body>
 </html>
