--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="angularApp">
 <head>
   <meta charset="UTF-8">
   <title>I-Hate-Angular</title>
+  <link rel="stylesheet" href="css/style.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular-route.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/postController.js"></script>
 </head>
-<body ng-app="angularApp">
+<body ng-controller="PostController as post">
   <h1>I HATE ANGELA</h1>
-  {{ 1 + 1 }}  
+  {{ 1 + 1 }}
+  <h3>{{ post.all }}</h3>
+  <div ui-view>
+    
+  </div>
+
+  
 </body>
 </html>
