--- a/app/index.html
+++ b/app/index.html
@@ -2,21 +2,33 @@
 <html lang="en" ng-app="angularApp">
 <head>
   <meta charset="UTF-8">
+  <base href="/posts"></base>
   <title>I-Hate-Angular</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular-route.min.js"></script>
-  <script src="js/app.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>   <script src="js/app.js"></script>
   <script src="js/postController.js"></script>
 </head>
-<body ng-controller="PostController as post">
-  <h1>I HATE ANGELA</h1>
-  {{ 1 + 1 }}
-  <h3>{{ post.all }}</h3>
+<body ng-controller= "PostController as posts">
+  <h1>I HATE ANGULLLAR</h1>
+  <h3>{{ posts.title }}</h3>
+<div class="wrapper">
   <div ui-view>
     
   </div>
+  <ul>
+    <li ng-repeat="post in posts.all">
+      <h4 id="post-title">{{ post.title }}</h4>
+      <h5>{{ post.created_at }}</h5>
+      <h6 id="post-author">{{ post.author }}</h6>
+      <h7 id="post-quote">{{ post.quote }}</h7>
+      <p id ="post-content">{{ post.content }}</p>
+      <img width="300px" src="{{ post.photo }}">
+      <iframe width="300" height="155"  src="{{ post.video }}" ></iframe>
+      <!-- <iframe width="300" height="155"  src="http://www.youtube.com/embed/LX_IX15wTLA" ></iframe> -->
+    </li>
+  </ul>
+</div>
 
-  
 </body>
 </html>
